--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
 @theme {
   --font-display: 'Urbanist', sans-serif;
   --breakpoint-3xl: 1920px;
+  --max-width-flux: 1320px;
 
   --color-primary: #bdff69;
+
+  
   /*
     --color-background: #0f1418;
     --color-foreground: #f0f2f5;
@@ -145,6 +148,7 @@
 .line-clamp-2 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  line-clamp: 2;
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
@@ -152,6 +156,7 @@
 .line-clamp-3 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  line-clamp: 3;
   -webkit-line-clamp: 3;
   overflow: hidden;
 }
