--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   --max-width-flux: 1320px;
 
   --color-primary: #bdff69;
-  --color-green: #328281;
+  /* --color-green: #328281; */
+  --color-green:#2F8E8E;
   --color-green-light: #47b3b1;
 
   
