fix: bug flash reload site

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,12 @@ $colorAlert: rgb(238, 122, 122);
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #000000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.7)),
+      url('./assets/img/general/background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: #ffffff;
     overflow-x: hidden;
   }
