--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   html {
     font-family: var(--font-display);
     scroll-behavior: smooth;
+    scroll-padding-top: 100px;
   }
 
   body {
@@ -50,7 +51,7 @@
   }
 
   body::after {
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.5);
     opacity: 0;
   }
 
